javadocs work, but public-only API (due to modules)